--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "dotenv": "^17.2.3",
+    "jspdf": "^3.0.4",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1",
